--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no initial-scale=1.0 ">
     <meta name="keywords" content="Pasteleria Artesanal, Pasteleria, Tortas, Desayunos">
     <meta name="description" content=" Hacemos todas las cosas ricas que vos queres. Podes pedirlo por aca ">
-    <link rel="icon" type="image/ico" href="../img/cheffcito.ico">
+    <link rel="icon" type="image/ico" href="img/cheffcito.ico">
     <link rel="stylesheet" href="../icofont/icofont.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -165,12 +165,19 @@
             </ul>
 
             <!--REDES-->
+
             <ul class=" col-5 col-md-3 list-unstyled ">
+
                 <li class="font-weight-bold text-uppercase ">Redes Sociales</li>
+
                 <li class="d-flex justify-content-between iconos ">
-                    <a href="https://www.instagram.com/cheffcito.iriarte/ "><i class="icofont-instagram"></i></a>
+
+                    <a href="https://www.instagram.com/cheffcito.iriarte/ "><i class="icofont-instagram "></i></a>
+
                     <i class="icofont-whatsapp "></i>
+
                 </li>
+
             </ul>
         </nav>
     </div>
