--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Pasteleria Artesanal, Pasteleria, Tortas, Desayunos">
     <meta name="description" content=" Hacemos todas las cosas ricas que vos queres. Podes pedirlo por aca ">
     <link rel="icon" type="image/ico" href="img/cheffcito.ico">
-    <link rel="stylesheet" href="../icofont/icofont.min.css">
+    <link rel="stylesheet" href="icofont/icofont.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
@@ -174,7 +174,7 @@
 
                     <a href="https://www.instagram.com/cheffcito.iriarte/ "><i class="icofont-instagram "></i></a>
 
-                    <i class="icofont-whatsapp "></i>
+                    <i class="icofont-whatsapp"></i>
 
                 </li>
 
