arrays y arreglos de img

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -203,7 +203,6 @@
                         <img src="../img/scon-min.png" alt="Scones">
                         <h5>
                             SCONES
-
                         </h5>
                         <BR> $400 x 6un
                         <select name="medidas">
@@ -214,10 +213,9 @@
                         <i class="icofont-cart"></i>
                     </article>
                     <article class="articleProductos">
-                        <br> <img src="../img/budin-min.png" alt="Torta Brownie">
+                        <br> <img src="../img/brownie-min.png" alt="Torta Brownie">
                         <h5>
                             TORTA BROWNIE <br> base de nuestro brownie de chocolate con una capa de dulce de leche y copos de merengue Italiano.
-
                         </h5>
                         <BR> $2500
                         <select name="medidas">
