problemas con el dom

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="grid">
-                    <article class="articleProductos">
+                    <!--  <article class="articleProductos">
                         <br> <img src="../img/rogel-min.png" alt="rogel">
                         <h5>
                             TORTA ROGEL<br> Masas fina de galeta muy crocante intercaladas con dulce de leche terminada con pico altos de meregue Italiano.
@@ -226,7 +226,7 @@
                         <i class="icofont-cart"></i>
 
                     </article>
-
+ -->
                 </div>
 
 
