--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,7 +64,7 @@
                 <div> <input type="text" name="search" placeholder="Busca tus productos" class="src" autocomplete="off" control-id="ControlID-6">
                 </div>
 
-                <div class="grid">
+                <div id="grid">
                     <!--  <article class="articleProductos">
                         <br> <img src="../img/rogel-min.png" alt="rogel">
                         <h5>
