eventos en filtrado

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -63,13 +63,15 @@
             <section class="sectionProtuctos">
                 <div> <input type="text" name="search" placeholder="Busca tus productos" class="src" autocomplete="off" control-id="ControlID-6">
                 </div>
-
+                <h5>Nuestras categorias :</h5>
+                <button class="categoriaTortas">TORTAS </button>
+                <button class="categoriaPanaderia">PANADERIA </button>
+                <button class="categoriaProductosFestivos">PRODUCTOS FESTIVOS </button>
                 <div id="grid">
                     <!--  <article class="articleProductos">
                         <br> <img src="../img/rogel-min.png" alt="rogel">
                         <h5>
                             TORTA ROGEL<br> Masas fina de galeta muy crocante intercaladas con dulce de leche terminada con pico altos de meregue Italiano.
-
                         </h5>
                         <BR> $2500
                         <select name="medidas">
@@ -79,7 +81,6 @@
                     </select>
                         <i class="icofont-cart"></i>
                     </article>
-
                     <article class="articleProductos">
                         <img src="../img/chescake-min.png" alt="Cheescake de frutos rojos"><br>
                         <h5> NEWYORK CHEESCAKE <br> Base de galletitas trituradas con una crema de queso, terminada con una deliciosa jalea de frutos rojos.
@@ -91,13 +92,11 @@
                        <option value="22cm"> 22cm </option> 
                     </select>
                         <i class="icofont-cart"></i>
-
                     </article>
                     <article class="articleProductos">
                         <img src="../img/pandulce.png" alt="Pan Dulce"><br>
                         <h5>
                             PAN DULCE<br> Pan dulces de chips de chocolate , de frutas secas o abrillantadas.
-
                         </h5>
                         <BR> $1500
                         <select name="medidas">
@@ -111,13 +110,11 @@
                            <option value="1kg"> 1 kg </option> 
                         </select>
                         <i class="icofont-cart"></i>
-
                     </article>
                     <article class="articleProductos">
                         <img src="../img/roscas-min.png" alt="Roscas de Pascuas"><br>
                         <h5>
                             ROSCA DE PASCUAS
-
                         </h5>
                         <BR> $1000
                         <select name="medidas">
@@ -146,7 +143,6 @@
                             </select>
                         <i class="icofont-cart"></i>
                     </article>
-
                     <article class="articleProductos">
                         <img src="../img/budin-min.png" alt="Carrotcake"><br>
                         <h5> CARROTCAKE <br> Budin de zanahoria con glaseado y decoracion de zanahoria en pasta ballina.<br>
@@ -162,7 +158,6 @@
                         <img src="../img/cinnamonroll-min.png" alt="Cinnamon rolls"><br>
                         <h5>
                             CINNAMON ROLLS<br>Rolls de canela hechos con una exquisita masa de papa, con un glaseado con nuez.
-
                         </h5>
                         <BR> $200 un
                         <select name="medidas">
@@ -176,7 +171,6 @@
                         <img src="../img/budines.png" alt="Budines">
                         <h5>
                             BUDINES
-
                         </h5>
                         <BR> $500un
                         <select name="medidas">
@@ -189,7 +183,6 @@
                         <img src="../img/pug-min.png" alt="Tortas Personalizadas, Perro Pug ">
                         <h5>
                             TORTAS PERSONALIZADAS <br> La torta que vos queres, nosotros te la hacemos.
-
                         </h5>
                         <BR> Consultar Precio
                         <select name="medidas">
@@ -224,7 +217,6 @@
                          <option value="22cm"> 22cm </option>
                         </select>
                         <i class="icofont-cart"></i>
-
                     </article>
  -->
                 </div>
