--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,7 +9,6 @@
     <meta name="description" content=" Todos nuestros productos en Stok, sumalos a tu carrito de productos.">
     <link rel="stylesheet" href="../icofont/icofont.min.css">
     <link rel="icon" type="image/ico" href="../img/cheffcito.ico">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
@@ -31,7 +30,6 @@
             <span class="navbar-toggler-icon"></span>
           </button>
                 <a class="navbar-brand" href="../index.html"><img src="../img/cheffcito.png" width="100" alt="logo de cheffcito"></a>
-
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
@@ -62,36 +60,32 @@
         <main>
             <section class="sectionProtuctos">
                 <div> <input type="text" name="search" id="busqueda" placeholder="Busca tus productos" class="src" autocomplete="off" control-id="ControlID-6">
+
+                    <li class="submenu">
+                        <img src="../img/cart.png" alt="">
+                        <div id="contenedorCarrito">
+                            <div id="carrito">
+
+                            </div>
+                            <p class="text-right">Total: <span id="total"></span> </p>
+                            <botton id="boton-vaciar" class="botonB">Vaciar</botton>
+
+                            <botton id="boton-comprar" class="botonB">Comprar</botton>
+
+                        </div>
+                    </li>
+
                 </div>
 
-                <h5>Nuestras categorias :</h5>
-                <button class="categoriaTortas">TORTAS </button>
-                <button class="categoriaPanaderia">PANADERIA </button>
-                <button class="categoriaProductosFestivos">PRODUCTOS FESTIVOS </button>
                 <div id="grid">
 
                 </div>
-                <li class="submenu">
-                    <img src="img/cart.png" alt="">
-                    <div id="carrito" class="list-group"> </div>
-                    <p class="text-right">Total: <span id="total"></span> </p>
-                    <botton id="boton-vaciar" class="btn btn-danger">Vaciar</botton>
 
-                    <botton id="boton-comprar" class="btn btn-danger">Comprar</botton>
-
-                </li>
-
+            </section>
+            <div class="volver">
+                <a href="productos.html"><img src="../img/flecha.svg" alt="Volve a arriba"></a>
+            </div>
     </div>
-
-
-    </section>
-    <div class="volver">
-        <a href="productos.html"><img src="../img/flecha.svg" alt="Volve a arriba"></a>
-
-    </div>
-
-    </div>
-
 
     </main>
     <!-- EL PIE DE PAGINA-->
@@ -140,11 +134,10 @@
         </div>
 
     </footer>
-
+    <script src=" https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="../js/main.js"></script>
 
 </body>
